--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,20 +111,22 @@ h1, h2{
 p{
     font-size: large;
     font-style: italic;
-    ont-family: Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: Arial', 'Helvetica Neue', Helvetica, sans-serif;
 
 }
 
 
 @media screen and (max-width: 640px) {
 
-    #name:{
-        float: none;
+    #name{
+        width: 100%;
+        left: 0;
     }
     nav{
         float: none;
-        position: fixed;
-        top: 10px;
+        padding-top:62px ;
+        text-align: center;
+        font-size: 24px;
     }
     .about img{
         float: none;
@@ -133,19 +135,59 @@ p{
     .about{
         padding-bottom: 5px;
         padding-top: 5px;
+        width: 52%;
+        margin-top: 167px;
     }
 
 
     .social{
-        width: 730px;
-        margin-top: 100px;
+        width: 578px;
+        margin-top: 196px;
+        margin-left: 100px;
+        position: absolute;
+        margin-bottom: 105px;
+        top: 508px;
+        left: 8px;
+        text-align: left;
+
+
+
+    }
+}
+
+@media screen and (max-width: 980px)and (min-width: 769px) {
+
+    .about img{
+        float: none;
+    }
+    .about{
+        width:300px;
+        margin-right: 10px;
+        margin-bottom: 120px;
+
+    }
+    .about img{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 768px) and (min-width: 641px) {
+
+    .social{
+        width: 704px;
+        margin-top: -28px;
         margin-left: 100px;
         position: absolute;
         margin-bottom: 110px;
         top: 508px;
         left: 8px;
+        text-align: left;
 
+    }
 
-
+    .about{
+        padding-bottom: 5px;
+        padding-top: 5px;
+        width: 65%;
     }
 }
